// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`PropertyCard Favorites Integration Favorites Snapshots should match snapshot with favorite property 1`] = `
<div
  class="rounded-md shadow-md relative"
>
  <a
    data-testid="property-link"
    href="/properties/snapshot-fav-1"
  >
    <div
      class="w-full aspect-[4/3] relative rounded-t-md overflow-hidden"
    >
      <img
        alt="Snapshot Favorite Property"
        class="object-cover rounded-t-md"
        data-fill="true"
        data-priority="true"
        data-sizes="100vw"
        data-testid="property-image"
        src="https://example.com/property1.jpg"
      />
    </div>
  </a>
  <div
    class="text-xs md:text-sm p-[10px]"
  >
    <div
      class="flex justify-between items-start mb-2"
    >
      <a
        data-testid="property-link"
        href="/properties/snapshot-fav-1"
      >
        <p
          class="text-gray-700 mr-3"
        >
          Snapshot Favorite Property
        </p>
      </a>
    </div>
    <a
      data-testid="property-link"
      href="/properties/snapshot-fav-1"
    >
      <div
        class="flex justify-between items-center mb-2"
      >
        <div
          class="text-gray-700 text-base"
        >
          $250/night
        </div>
      </div>
      <div
        class="flex justify-between items-center text-blue-800 text-[11px]"
      >
        <div
          class="flex justify-center items-center gap-1"
        >
          <div
            class="inline text-sm"
            data-testid="map-marker-icon"
          >
            📍
          </div>
          <p>
            Miami
          </p>
        </div>
        <div
          class="flex justify-between items-center gap-3"
        >
          <p>
            <span
              class="mr-1"
            >
              3
               Beds
            </span>
            <span>
              2
               Baths
            </span>
          </p>
        </div>
      </div>
    </a>
  </div>
</div>
`;

exports[`PropertyCard Favorites Integration Favorites Snapshots should match snapshot with favorite property and favorite button 1`] = `
<div
  class="rounded-md shadow-md relative"
>
  <a
    data-testid="property-link"
    href="/properties/snapshot-with-button"
  >
    <div
      class="w-full aspect-[4/3] relative rounded-t-md overflow-hidden"
    >
      <img
        alt="Favorite With Button"
        class="object-cover rounded-t-md"
        data-fill="true"
        data-priority="true"
        data-sizes="100vw"
        data-testid="property-image"
        src="https://example.com/property1.jpg"
      />
    </div>
  </a>
  <div
    class="text-xs md:text-sm p-[10px]"
  >
    <div
      class="flex justify-between items-start mb-2"
    >
      <a
        data-testid="property-link"
        href="/properties/snapshot-with-button"
      >
        <p
          class="text-gray-700 mr-3"
        >
          Favorite With Button
        </p>
      </a>
      <div
        data-property-id="snapshot-with-button"
        data-testid="property-favorite-button"
      >
        ❤️
      </div>
    </div>
    <a
      data-testid="property-link"
      href="/properties/snapshot-with-button"
    >
      <div
        class="flex justify-between items-center mb-2"
      >
        <div
          class="text-gray-700 text-base"
        >
          $250/night
        </div>
      </div>
      <div
        class="flex justify-between items-center text-blue-800 text-[11px]"
      >
        <div
          class="flex justify-center items-center gap-1"
        >
          <div
            class="inline text-sm"
            data-testid="map-marker-icon"
          >
            📍
          </div>
          <p>
            Miami
          </p>
        </div>
        <div
          class="flex justify-between items-center gap-3"
        >
          <p>
            <span
              class="mr-1"
            >
              3
               Beds
            </span>
            <span>
              2
               Baths
            </span>
          </p>
        </div>
      </div>
    </a>
  </div>
</div>
`;

exports[`PropertyCard Favorites Integration Favorites Snapshots should match snapshot with recently added favorite 1`] = `
<div
  class="rounded-md shadow-md relative"
>
  <a
    data-testid="property-link"
    href="/properties/recent-fav-snap"
  >
    <div
      class="w-full aspect-[4/3] relative rounded-t-md overflow-hidden"
    >
      <img
        alt="Recently Added Favorite"
        class="object-cover rounded-t-md"
        data-fill="true"
        data-priority="true"
        data-sizes="100vw"
        data-testid="property-image"
        src="https://example.com/property1.jpg"
      />
    </div>
    <p
      class="absolute top-[6px] left-[6px] bg-white px-3 py-1 rounded-md text-gray-800 text-xs text-center"
    >
      Recently Added
    </p>
  </a>
  <div
    class="text-xs md:text-sm p-[10px]"
  >
    <div
      class="flex justify-between items-start mb-2"
    >
      <a
        data-testid="property-link"
        href="/properties/recent-fav-snap"
      >
        <p
          class="text-gray-700 mr-3"
        >
          Recently Added Favorite
        </p>
      </a>
    </div>
    <a
      data-testid="property-link"
      href="/properties/recent-fav-snap"
    >
      <div
        class="flex justify-between items-center mb-2"
      >
        <div
          class="text-gray-700 text-base"
        >
          $250/night
        </div>
      </div>
      <div
        class="flex justify-between items-center text-blue-800 text-[11px]"
      >
        <div
          class="flex justify-center items-center gap-1"
        >
          <div
            class="inline text-sm"
            data-testid="map-marker-icon"
          >
            📍
          </div>
          <p>
            Miami
          </p>
        </div>
        <div
          class="flex justify-between items-center gap-3"
        >
          <p>
            <span
              class="mr-1"
            >
              3
               Beds
            </span>
            <span>
              2
               Baths
            </span>
          </p>
        </div>
      </div>
    </a>
  </div>
</div>
`;

exports[`PropertyCard Snapshots should match snapshot with basic property 1`] = `
<div
  class="rounded-md shadow-md relative"
>
  <a
    data-testid="property-link"
    href="/properties/property-123"
  >
    <div
      class="w-full aspect-[4/3] relative rounded-t-md overflow-hidden"
    >
      <img
        alt="Luxury Beach House"
        class="object-cover rounded-t-md"
        data-fill="true"
        data-priority="true"
        data-sizes="100vw"
        data-testid="property-image"
        src="https://example.com/property1.jpg"
      />
    </div>
  </a>
  <div
    class="text-xs md:text-sm p-[10px]"
  >
    <div
      class="flex justify-between items-start mb-2"
    >
      <a
        data-testid="property-link"
        href="/properties/property-123"
      >
        <p
          class="text-gray-700 mr-3"
        >
          Luxury Beach House
        </p>
      </a>
    </div>
    <a
      data-testid="property-link"
      href="/properties/property-123"
    >
      <div
        class="flex justify-between items-center mb-2"
      >
        <div
          class="text-gray-700 text-base"
        >
          $250/night
        </div>
      </div>
      <div
        class="flex justify-between items-center text-blue-800 text-[11px]"
      >
        <div
          class="flex justify-center items-center gap-1"
        >
          <div
            class="inline text-sm"
            data-testid="map-marker-icon"
          >
            📍
          </div>
          <p>
            Miami
          </p>
        </div>
        <div
          class="flex justify-between items-center gap-3"
        >
          <p>
            <span
              class="mr-1"
            >
              3
               Beds
            </span>
            <span>
              2
               Baths
            </span>
          </p>
        </div>
      </div>
    </a>
  </div>
</div>
`;

exports[`PropertyCard Snapshots should match snapshot with logged in user and favorite button 1`] = `
<div
  class="rounded-md shadow-md relative"
>
  <a
    data-testid="property-link"
    href="/properties/property-123"
  >
    <div
      class="w-full aspect-[4/3] relative rounded-t-md overflow-hidden"
    >
      <img
        alt="Luxury Beach House"
        class="object-cover rounded-t-md"
        data-fill="true"
        data-priority="true"
        data-sizes="100vw"
        data-testid="property-image"
        src="https://example.com/property1.jpg"
      />
    </div>
  </a>
  <div
    class="text-xs md:text-sm p-[10px]"
  >
    <div
      class="flex justify-between items-start mb-2"
    >
      <a
        data-testid="property-link"
        href="/properties/property-123"
      >
        <p
          class="text-gray-700 mr-3"
        >
          Luxury Beach House
        </p>
      </a>
      <div
        data-property-id="property-123"
        data-testid="property-favorite-button"
      >
        ❤️
      </div>
    </div>
    <a
      data-testid="property-link"
      href="/properties/property-123"
    >
      <div
        class="flex justify-between items-center mb-2"
      >
        <div
          class="text-gray-700 text-base"
        >
          $250/night
        </div>
      </div>
      <div
        class="flex justify-between items-center text-blue-800 text-[11px]"
      >
        <div
          class="flex justify-center items-center gap-1"
        >
          <div
            class="inline text-sm"
            data-testid="map-marker-icon"
          >
            📍
          </div>
          <p>
            Miami
          </p>
        </div>
        <div
          class="flex justify-between items-center gap-3"
        >
          <p>
            <span
              class="mr-1"
            >
              3
               Beds
            </span>
            <span>
              2
               Baths
            </span>
          </p>
        </div>
      </div>
    </a>
  </div>
</div>
`;

exports[`PropertyCard Snapshots should match snapshot with recently added property 1`] = `
<div
  class="rounded-md shadow-md relative"
>
  <a
    data-testid="property-link"
    href="/properties/property-123"
  >
    <div
      class="w-full aspect-[4/3] relative rounded-t-md overflow-hidden"
    >
      <img
        alt="Luxury Beach House"
        class="object-cover rounded-t-md"
        data-fill="true"
        data-priority="true"
        data-sizes="100vw"
        data-testid="property-image"
        src="https://example.com/property1.jpg"
      />
    </div>
  </a>
  <div
    class="text-xs md:text-sm p-[10px]"
  >
    <div
      class="flex justify-between items-start mb-2"
    >
      <a
        data-testid="property-link"
        href="/properties/property-123"
      >
        <p
          class="text-gray-700 mr-3"
        >
          Luxury Beach House
        </p>
      </a>
    </div>
    <a
      data-testid="property-link"
      href="/properties/property-123"
    >
      <div
        class="flex justify-between items-center mb-2"
      >
        <div
          class="text-gray-700 text-base"
        >
          $250/night
        </div>
      </div>
      <div
        class="flex justify-between items-center text-blue-800 text-[11px]"
      >
        <div
          class="flex justify-center items-center gap-1"
        >
          <div
            class="inline text-sm"
            data-testid="map-marker-icon"
          >
            📍
          </div>
          <p>
            Miami
          </p>
        </div>
        <div
          class="flex justify-between items-center gap-3"
        >
          <p>
            <span
              class="mr-1"
            >
              3
               Beds
            </span>
            <span>
              2
               Baths
            </span>
          </p>
        </div>
      </div>
    </a>
  </div>
</div>
`;
